# radontea

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  CHANGELOG.txt  LICENSE  MANIFEST.in  README.md  README.rst  README.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: check.yml  deploy_pypi.yml
doc/: Makefile  README.md  commit.py  commit_gh-pages.py  conf.py  deploy_ghpages.py  index.rst  make.py  upload.py
doc/_extensions/: numpydoc.py
docs/: README.md  code_reference.rst  conf.py  examples.rst  index.rst  introduction.rst  requirements.txt  sec_changelog.rst  sec_examples.rst
examples/: 3D_example.py  benchmark_3d.py  comparison_parallel.py  progression_3d.py
radontea/: _Back.py  _Back_2D.py  _Back_3D.py  _Back_Fan.py  _Back_iterative.py  _Back_meta.py  _Radon.py  __init__.py  __main__.py  _alg_art.py  _alg_bpj.py  _alg_fmp.py  _alg_int.py  _alg_sart.py  _logo.py  _rdn_fan.py  _rdn_prl.py  _threed.py  _version.py  alg_bpj.py  alg_fmp.py  alg_int.py  alg_sart.py  fan.py  logo.py  rdn_fan.py  rdn_prl.py  threed.py  util.py
tests/: README.md  requirements.txt  sinogram.py  test_alg_art.py  test_alg_bpj.py  test_alg_fmp.py  test_alg_int.py  test_alg_sart.py  test_backproject.py  test_count.py  test_rdn_prl.py  test_util.py
tests/data/: 2d_art.txt  2d_backproject.txt  2d_fmp.txt  2d_int.txt  2d_sart.txt
